--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "compression": "^1.7.1",
     "node-fetch": "^2.6.1",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "svelte-persistent-store": "^0.1.4"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
