--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "rollup": "^2.28.2",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.28.10",
     "svelte": "^3.29.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^1.0.0",
+    "svelte-persistent-store": "^0.1.4"
   }
 }
