--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
+    "express-session": "^1.17.1",
+    "keycloak-connect": "^11.0.2",
     "node-fetch": "^2.6.1",
     "polka": "^0.5.2",
+    "session-file-store": "^1.5.0",
     "sirv": "^1.0.0",
     "svelte-persistent-store": "0.1.3"
   },
