--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "base64-js": "^1.3.1",
     "compression": "^1.7.1",
+    "js-sha256": "^0.9.0",
     "node-fetch": "^2.6.1",
     "polka": "^0.5.2",
     "sirv": "^1.0.0",
