--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "svelte": "^3.30.1"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "smelte": "^1.0.18"
   }
 }
