--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "HTR-Frontend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public -p 3000"
   },
   "dependencies": {
     "base64-js": "^1.3.1",
