--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -p 3000"
+    "start": "sirv public"
   },
   "dependencies": {
     "base64-js": "^1.3.1",
